<resources>
    <string name="app_name">MyIntentApp</string>
    <string name="move_activity">Pindah Activity</string>
    <string name="move_with_data">Pindah Activity dengan Data</string>
    <string name="move_with_object">Pindah Activity dengan Object</string>
    <string name="dial_number">Dial a Number</string>
    <string name="move_with_result">Pindah Activity untuk Result</string>
    <string name="result_from_activity">Hasil dari Activity</string>
    <string name="choose_number">Pilih angka yang kamu suka</string>
    <string name="_1000">1000</string>
    <string name="_2000">2000</string>
    <string name="_3000">3000</string>
    <string name="_4000">4000</string>
    <string name="choose">Pilih</string>
    <string name="data_received">Ini Move Activity</string>
    <string name="object_received">object_received</string>

</resources>